src/objects/Taxes__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Liquor_Sales_Tax__c</fullName>
        <description>Sales Tax on Liquor</description>
        <label>Liquor Sales Tax</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <description>General Sales Tax</description>
        <label>Sales Tax</label>
        <precision>6</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt__c</fullName>
        <description>Tax Exempt Sale</description>
        <label>Tax Exempt</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <label>Tax ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transit_Improvement_Sales_Tax__c</fullName>
        <label>Transit Improvement Sales Tax</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Use_Tax__c</fullName>
        <description>General Use Tax</description>
        <label>Use Tax</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <label>Taxes</label>
</CustomObject>